--- a/src/webui/views/balance.pug
+++ b/src/webui/views/balance.pug
@@ -1,12 +1,18 @@
 doctype html
 html(lang="zh")
     include includes/head.pug
-
+    style.
+        .green {
+            color: green;
+        }
+        .orange {
+            color: orange;
+        }
     body
         include includes/menu.pug
         h1 余额查询
-        p 当前资金钱包余额：已确认 #{main.confirmed}，未确认 #{main.unconfirmed}
-        p 当前 NOTE 铭文钱包余额：已确认 #{token.confirmed}（NOTE），未确认 #{token.unconfirmed}
+        p 当前资金钱包余额：已确认 <span class="green">#{main.confirmed}</span>（聪），未确认 <span class="orange">#{main.unconfirmed}</span>（聪）
+        p 当前 NOTE 铭文钱包余额：已确认 <span class="green">#{token.confirmed}</span>（NOTE），未确认 <span class="orange">#{token.unconfirmed}</span>（NOTE）
 
         p(class="notice")
          | 这个页面仅展示当前钱包的余额，如果你想查询其他钱包的 NOTE 余额，请访问
